test_inputs/bad/invalid_override_1.lat
class A {
    int doSomething() {
        return 0;
    }
}

class B extends A {
    int doSomething(int a) {
        retrun a;
    }
}

int main() {
    return 0;
}
